--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ packages = [{include = "scripts"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
-better-web3 = "^1.3.1"
+better-web3 = "1.4.0"
 questionary = "^1.10.0"
 tqdm = "^4.65.0"
 loguru = "^0.7.0"
