--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "better-web3-scripts"
-version = "1.0.0"
+version = "1.2.0"
 description = "Web3.py tools and scripts"
 authors = ["Alen <alen.kimov@gmail.com>"]
 readme = "README.md"
@@ -8,11 +8,13 @@ packages = [{include = "scripts"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
-better-web3 = "1.4.0"
-questionary = "^1.10.0"
-tqdm = "^4.65.0"
+questionary = "^2.0.0"
+tqdm = "^4.66.1"
 loguru = "^0.7.0"
-pydantic = "^2.0.2"
+pydantic = "^2.2.1"
+better-web3 = "^3.0.2"
+better-automation = "^0.2.1"
+better-proxy = "^0.2.0"
 
 
 [build-system]
