--- a/config/.default/chains.toml
+++ b/config/.default/chains.toml
@@ -9,7 +9,7 @@ name = "BSC"
 rpc = "https://rpc.ankr.com/bsc"
 explorer_url = "https://bscscan.com"
 symbol = "BNB"
-gas_price = 1.1  # gwei
+max_fee_per_gas = 1.1  # gwei
 
 [mainnet.137]
 name = "Polygon"
