--- a/config/.default/chains.toml
+++ b/config/.default/chains.toml
@@ -1,11 +1,14 @@
-# Настройка сетей
-# Доступные параметры:
-# rpc - кастомный rpc
-# batch_request_size
-# max_fee_per_gas
-#
-# Например:
 # [56]  # BSC
 # rpc = "https://my-custom-rpc.com/my-api-key"
 # batch_request_size = 500
 # max_fee_per_gas = 1.1  # gwei
+
+# [5]  # Goerli
+# rpc = "https://eth-goerli.public.blastapi.io"
+
+# [10]
+# rpc = "https://1rpc.io/op"
+# batch_request_size = 1
+
+# [185]  # Mintchain
+# proxy = "ip:port:user:password" # any format
